--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "nodemon index.js"
   },
   "devDependencies": {
-    "nodemon":"2.0.21"
+    "nodemon": "2.0.21"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "node-fetch": "^2.6.9"
   }
 }
